--- a/views/love.ejs
+++ b/views/love.ejs
@@ -1,3 +1,9 @@
 <h1>You fell in love with: <%= thingVar.toUpperCase() %></h1>
 
+<% if(thingVar.toLowerCase() === "rusty") { %>
+    <p>Good choice! Rusty is the best!</p>
+<% } else { %>
+    <p>Bad choice! You should have said Rusty</p>
+<% } %>
+
 <p>PS: this is the love.ejs file!</p>
