adding partials to the templates

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,10 @@
+<% include partials/header%>
+
+
 <h1>This is the homepage!</h1>
 
 <img src="https://animalso.com/wp-content/uploads/2016/10/Pomsky-15.jpg" alt="">
 
+<% include partials/footer%>
 
 
