--- a/views/love.ejs
+++ b/views/love.ejs
@@ -1,3 +1,4 @@
+<% include partials/header%>
 <h1>You fell in love with: <%= thingVar.toUpperCase() %></h1>
 
 <% if(thingVar.toLowerCase() === "rusty") { %>
@@ -7,3 +8,7 @@
 <% } %>
 
 <p>PS: this is the love.ejs file!</p>
+    
+<% include partials/footer%>
+
+
