--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,3 +1,7 @@
+<% include partials/header%>
+
+
+
 <h1>The Posts Page</h1>
 
 
@@ -12,3 +16,6 @@
             <%= post.title %> - <b><%= post.author %></b>
     </li>
 <% }) %>
+
+<% include partials/footer%>
+
